--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,54 +1,34 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/class-name-casing": "warn",
+    "@typescript-eslint/semi": "warn",
+    "eqeqeq": "warn",
+    "no-throw-literal": "warn",
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single", { "avoidEscape": true }],
+    "semi": ["error", "always"],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "maxEOF": 0,
+        "maxBOF": 0,
+        "max": 2
+      }
     ],
-    "rules": {
-        "@typescript-eslint/class-name-casing": "warn",
-        "@typescript-eslint/semi": "warn",
-        "eqeqeq": "warn",
-        "no-throw-literal": "warn",
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "no-multiple-empty-lines": [
-            "error",
-            {
-                "maxEOF": 0,
-                "maxBOF": 0,
-                "max": 2
-            }
-        ],
-        "no-console": [
-            "error", 
-            { 
-                "allow": [
-                    "warn", 
-                    "error"
-                ] 
-            }
-        ],
-        "curly": [
-            "error", 
-            "multi"
-        ]
-    }
+    "no-console": [
+      "error",
+      {
+        "allow": ["warn", "error"]
+      }
+    ],
+    "curly": ["error", "multi"]
+  }
 }
