Start adding formatter
Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "publisher": "diogotcorreia",
   "categories": [
-    "Programming Languages"
+    "Programming Languages",
+    "Formatters"
   ],
   "author": {
     "name": "Diogo Correia"
